--- a/miniprojekti/bibtex.bib
+++ b/miniprojekti/bibtex.bib
@@ -1,5 +1,5 @@
 @book{foxis,
-author = {{"O}rn{"a}vesi-M{"a}yr{"a}-M{"a}kinen Otto},
-title = {{"O}ljynjalostustaito k{"a}{"a}nteisesti},
+author = {\"{O}rn\"{a}vesi-M\"{a}yr\"{a}-M\"{a}kinen Otto},
+title = {\"{O}ljynjalostustaito k\"{a}\"{a}nteisesti},
 }
 
