--- a/miniprojekti/sigproc.bib
+++ b/miniprojekti/sigproc.bib
@@ -1,10 +1,10 @@
 @inProceedings{jai23,
-author = {Kalle R{"a}{"a}pp{"a}inen},
+author = {Kalle R\"{a}\"{a}pp\"{a}inen},
 title = {Raparperin maistelu},
 }
 
 @article{kui44,
-author = {Itse Tekij{"a}},
+author = {Itse Tekij\"{a}},
 title = {Oman tiedon taito},
 }
 
