tooltip-tekstiä muokattu

--- a/miniprojekti/null.bib
+++ b/miniprojekti/null.bib
@@ -1,7 +1,36 @@
-@article{Ki432,
-author = {Kirjoittja},
-journal = {Lehti},
-title = {dkdsa},
-year = {432},
+@inProceedings{NNS22,
+author = {Eka Nimi and Toka Nimi and Suku, Etu},
+booktitle = {Testi},
+title = {Inproceedings},
+year = {1222},
+}
+
+@article{A77,
+author = {Atest},
+journal = {nklnl},
+title = {nnl},
+year = {1777},
+}
+
+@inProceedings{V65,
+author = {Ville},
+booktitle = {Kokeilu},
+month = {11},
+title = {T\"{a}m\"{a}},
+year = {1765},
+}
+
+@book{E99,
+editor = {Editor},
+publisher = {Publisher},
+title = {Tama on book},
+year = {1999},
+}
+
+@book{T66,
+author = {Author Toimii},
+publisher = {Publisher},
+title = {BookAgain},
+year = {1666},
 }
 
